--- a/nba/sql/sqlalchemyv2.ipynb
+++ b/nba/sql/sqlalchemyv2.ipynb
@@ -12,27 +12,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2023-05-07 20:28:35,134 INFO sqlalchemy.engine.Engine SELECT CAST(SERVERPROPERTY('ProductVersion') AS VARCHAR)\n",
-      "2023-05-07 20:28:35,134 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
-      "2023-05-07 20:28:35,137 INFO sqlalchemy.engine.Engine SELECT schema_name()\n",
-      "2023-05-07 20:28:35,137 INFO sqlalchemy.engine.Engine [generated in 0.00043s] ()\n",
-      "2023-05-07 20:28:35,142 INFO sqlalchemy.engine.Engine SELECT CAST('test max support' AS NVARCHAR(max))\n",
-      "2023-05-07 20:28:35,142 INFO sqlalchemy.engine.Engine [generated in 0.00068s] ()\n",
-      "2023-05-07 20:28:35,146 INFO sqlalchemy.engine.Engine SELECT 1 FROM fn_listextendedproperty(default, default, default, default, default, default, default)\n",
-      "2023-05-07 20:28:35,147 INFO sqlalchemy.engine.Engine [generated in 0.00057s] ()\n",
-      "2023-05-07 20:28:35,153 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2023-05-07 20:28:35,153 INFO sqlalchemy.engine.Engine SELECT DB_NAME()\n",
-      "2023-05-07 20:28:35,154 INFO sqlalchemy.engine.Engine [generated in 0.00119s] ()\n",
-      "2023-05-07 20:28:35,156 INFO sqlalchemy.engine.Engine ROLLBACK\n",
-      "Connection to NBA was successful.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sqlalchemy\n",
     "from sqlalchemy import text\n",
@@ -51,20 +31,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "mssql+pyodbc://sa:***@localhost:1433/NBA?driver=ODBC+Driver+17+for+SQL+Server"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "nba = Database(database='NBA')"
    ]
@@ -87,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,9 +82,7 @@
     "CREATE TABLE teams(\n",
     "team_id INT PRIMARY KEY NOT NULL,\n",
     "team_name VARCHAR(20),\n",
-    "team_abbreviation CHAR(3),\n",
-    "arena_name VARCHAR(30),\n",
-    "team_year INT\n",
+    "team_abbreviation CHAR(3)\n",
     ")\n",
     "\"\"\")\n",
     "\n",
@@ -123,7 +90,17 @@
     "CREATE TABLE players(\n",
     "player_id INT PRIMARY KEY,\n",
     "player_name VARCHAR(30)\n",
-    ")\"\"\")\n",
+    ")\n",
+    "\"\"\")\n",
+    "\n",
+    "create_team_arena = text(\"\"\"\n",
+    "CREATE TABLE arena_history(\n",
+    "arena_id INT PRIMARY KEY,\n",
+    "arena_name VARCHAR(30),\n",
+    "team_year INT,\n",
+    "team_id INT FOREIGN KEY REFERENCES teams(team_id)\n",
+    ")\n",
+    "\"\"\")\n",
     "\n",
     "create_player_team_table = text(\"\"\"\n",
     "CREATE TABLE player_team_history(\n",
@@ -135,10 +112,26 @@
     ")\n",
     "\"\"\")\n",
     "\n",
+    "create_games_played = text(\"\"\"\n",
+    "CREATE TABLE games_played(\n",
+    "game_id CHAR(18) PRIMARY KEY,\n",
+    "game_date datetime,\n",
+    "visitor_team_id INT FOREIGN KEY REFERENCES teams(team_id), \n",
+    "visitor_pts INT NOT NULL,\n",
+    "home_team_id INT FOREIGN KEY REFERENCES teams(team_id),\n",
+    "home_pts INT NOT NULL,\n",
+    "overtime VARCHAR(5),\n",
+    "attendance INT,\n",
+    "arena_id INT\n",
+    ")\n",
+    "\"\"\")\n",
+    "\n",
     "with nba.engine.begin() as conn:\n",
     "    conn.execute(create_team_table)\n",
     "    conn.execute(create_player_table)\n",
-    "    conn.execute(create_player_team_table)"
+    "    conn.execute(create_team_arena)\n",
+    "    conn.execute(create_player_team_table)\n",
+    "    conn.execute(create_games_played)"
    ]
   },
   {
@@ -174,167 +167,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>team_name</th>\n",
-       "      <th>team_abbreviation</th>\n",
-       "      <th>Arena</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>DateTime</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2000-10-31 19:30:00</th>\n",
-       "      <td>Charlotte Hornets</td>\n",
-       "      <td>CHH</td>\n",
-       "      <td>Philips Arena</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-10-31 19:30:00</th>\n",
-       "      <td>Cleveland Cavaliers</td>\n",
-       "      <td>CLE</td>\n",
-       "      <td>Continental Airlines Arena</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-10-31 19:30:00</th>\n",
-       "      <td>Washington Wizards</td>\n",
-       "      <td>WAS</td>\n",
-       "      <td>TD Waterhouse Centre</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-10-31 20:00:00</th>\n",
-       "      <td>Milwaukee Bucks</td>\n",
-       "      <td>MIL</td>\n",
-       "      <td>Reunion Arena</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2000-10-31 20:00:00</th>\n",
-       "      <td>Philadelphia 76ers</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>Madison Square Garden (IV)</td>\n",
-       "      <td>2000</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-03-25 22:00:00</th>\n",
-       "      <td>Philadelphia 76ers</td>\n",
-       "      <td>PHI</td>\n",
-       "      <td>Footprint Center</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-03-31 22:30:00</th>\n",
-       "      <td>Denver Nuggets</td>\n",
-       "      <td>DEN</td>\n",
-       "      <td>Footprint Center</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-04 22:00:00</th>\n",
-       "      <td>San Antonio Spurs</td>\n",
-       "      <td>SAS</td>\n",
-       "      <td>Footprint Center</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-06 20:00:00</th>\n",
-       "      <td>Portland Trail Blazers</td>\n",
-       "      <td>POR</td>\n",
-       "      <td>Moody Center</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2023-04-08 16:00:00</th>\n",
-       "      <td>Minnesota Timberwolves</td>\n",
-       "      <td>MIN</td>\n",
-       "      <td>Moody Center</td>\n",
-       "      <td>2023</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>2640 rows × 4 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                                  team_name team_abbreviation  \\\n",
-       "DateTime                                                        \n",
-       "2000-10-31 19:30:00       Charlotte Hornets               CHH   \n",
-       "2000-10-31 19:30:00     Cleveland Cavaliers               CLE   \n",
-       "2000-10-31 19:30:00      Washington Wizards               WAS   \n",
-       "2000-10-31 20:00:00         Milwaukee Bucks               MIL   \n",
-       "2000-10-31 20:00:00      Philadelphia 76ers               PHI   \n",
-       "...                                     ...               ...   \n",
-       "2023-03-25 22:00:00      Philadelphia 76ers               PHI   \n",
-       "2023-03-31 22:30:00          Denver Nuggets               DEN   \n",
-       "2023-04-04 22:00:00       San Antonio Spurs               SAS   \n",
-       "2023-04-06 20:00:00  Portland Trail Blazers               POR   \n",
-       "2023-04-08 16:00:00  Minnesota Timberwolves               MIN   \n",
-       "\n",
-       "                                          Arena  year  \n",
-       "DateTime                                               \n",
-       "2000-10-31 19:30:00               Philips Arena  2000  \n",
-       "2000-10-31 19:30:00  Continental Airlines Arena  2000  \n",
-       "2000-10-31 19:30:00        TD Waterhouse Centre  2000  \n",
-       "2000-10-31 20:00:00               Reunion Arena  2000  \n",
-       "2000-10-31 20:00:00  Madison Square Garden (IV)  2000  \n",
-       "...                                         ...   ...  \n",
-       "2023-03-25 22:00:00            Footprint Center  2023  \n",
-       "2023-03-31 22:30:00            Footprint Center  2023  \n",
-       "2023-04-04 22:00:00            Footprint Center  2023  \n",
-       "2023-04-06 20:00:00                Moody Center  2023  \n",
-       "2023-04-08 16:00:00                Moody Center  2023  \n",
-       "\n",
-       "[2640 rows x 4 columns]"
-      ]
-     },
-     "execution_count": 38,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "teams_df = games_played.set_index('DateTime').rename(columns={'Visitor':'team_name', 'Visitor_short':'team_abbreviation',})[['team_name','team_abbreviation','Arena']].drop_duplicates().copy()\n",
-    "teams_df['year'] = teams_df.index.year\n",
-    "teams_df"
+    "games_played['game_id'].apply(lambda x: len(x)).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teams_df = games_played.rename(columns={'Home':'team_name', 'Home_short':'team_abbreviation',})[['DateTime','team_name','team_abbreviation','Arena']].copy()\n",
+    "teams_df['year'] = teams_df['DateTime'].apply(lambda x: str(x.year))\n",
+    "teams_df.drop(columns=['DateTime'], inplace=True)\n",
+    "teams_df = teams_df.dropna(subset=['Arena']).drop_duplicates()\n",
+    "teams_df['team_id'] = teams_df['team_abbreviation'] + teams_df['year'] + "
    ]
   },
   {
@@ -370,33 +220,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "drop_table = text(\"\"\"\n",
+    "DROP TABLE player_team_history;\n",
+    "DROP TABLE games_played;\n",
+    "DROP TABLE arena_history;\n",
+    "DROP TABLE players;\n",
+    "DROP TABLE teams;\n",
+    "\n",
+    "\"\"\")\n",
+    "\n",
+    "with nba.engine.begin() as conn:\n",
+    "    conn.execute(drop_table)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Drop Column from Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "column_to_drop = '[index]'\n",
+    "table_name = 'play_by_play'\n",
+    "drop_column = text(f\"\"\"\n",
+    "ALTER TABLE {table_name}\n",
+    "DROP COLUMN {column_to_drop}\n",
+    "\"\"\")\n",
+    "\n",
+    "with nba.engine.begin() as conn:\n",
+    "    conn.execute(drop_column)\n",
+    "    print(f'Column {column_to_drop} has been dropped from table {table_name}')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Access Data from Table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2023-05-07 23:04:28,093 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
-      "2023-05-07 23:04:28,094 INFO sqlalchemy.engine.Engine \n",
-      "DROP TABLE player_team_history;\n",
-      "DROP TABLE players;\n",
-      "DROP TABLE teams;\n",
-      "\n",
-      "2023-05-07 23:04:28,094 INFO sqlalchemy.engine.Engine [generated in 0.00062s] ()\n",
-      "2023-05-07 23:04:28,108 INFO sqlalchemy.engine.Engine COMMIT\n"
+      "2023-05-09 22:09:39,413 INFO sqlalchemy.engine.Engine SELECT CAST(SERVERPROPERTY('ProductVersion') AS VARCHAR)\n",
+      "2023-05-09 22:09:39,413 INFO sqlalchemy.engine.Engine [raw sql] ()\n",
+      "2023-05-09 22:09:39,415 INFO sqlalchemy.engine.Engine SELECT schema_name()\n",
+      "2023-05-09 22:09:39,415 INFO sqlalchemy.engine.Engine [generated in 0.00058s] ()\n",
+      "2023-05-09 22:09:39,426 INFO sqlalchemy.engine.Engine SELECT CAST('test max support' AS NVARCHAR(max))\n",
+      "2023-05-09 22:09:39,426 INFO sqlalchemy.engine.Engine [generated in 0.00075s] ()\n",
+      "2023-05-09 22:09:39,428 INFO sqlalchemy.engine.Engine SELECT 1 FROM fn_listextendedproperty(default, default, default, default, default, default, default)\n",
+      "2023-05-09 22:09:39,429 INFO sqlalchemy.engine.Engine [generated in 0.00039s] ()\n",
+      "2023-05-09 22:09:39,432 INFO sqlalchemy.engine.Engine BEGIN (implicit)\n",
+      "2023-05-09 22:09:39,433 INFO sqlalchemy.engine.Engine SELECT * FROM play_by_play WHERE game_id = '202304301530GSWSAC'\n",
+      "2023-05-09 22:09:39,433 INFO sqlalchemy.engine.Engine [generated in 0.00135s] ()\n",
+      "2023-05-09 22:09:40,638 INFO sqlalchemy.engine.Engine ROLLBACK\n"
      ]
     }
    ],
    "source": [
-    "drop_table = text(\"\"\"\n",
-    "DROP TABLE player_team_history;\n",
-    "DROP TABLE players;\n",
-    "DROP TABLE teams;\n",
-    "\"\"\")\n",
+    "with nba.engine.connect() as conn:\n",
+    "    pbp = conn.execute(text(\"SELECT * FROM play_by_play WHERE game_id = '202304301530GSWSAC'\"))\n",
+    "    rows = pbp.fetchall()\n",
     "\n",
-    "with nba.engine.begin() as conn:\n",
-    "    conn.execute(drop_table)"
+    "pbp_df = pd.DataFrame(rows, columns=pbp.keys())"
    ]
   }
  ],
