--- a/expenses_tracker/tests.ipynb
+++ b/expenses_tracker/tests.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
      "text": [
       "Successfully connected to the database.\n",
       "SQL Server version: Microsoft SQL Azure (RTM) - 12.0.2000.8 \n",
-      "\tMay 22 2023 22:22:02 \n",
+      "\tJul  8 2023 12:00:47 \n",
       "\tCopyright (C) 2022 Microsoft Corporation\n",
       "\n"
      ]
