--- a/nba_airflow/core/nba_api.ipynb
+++ b/nba_airflow/core/nba_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1354,7 +1354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1379,6 +1379,7 @@
     "    try:\n",
     "        test_soup = request_soup_for_game(year=year, month=month, day=day, team=team)\n",
     "        logging.info(f'Successfully processed {x} request!')\n",
+    "        \n",
     "    except Exception as e:\n",
     "        logging.error(f'Request failed for {x}', exc_info=True)\n",
     "        failed_games.append(x)\n",
@@ -1413,7 +1414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1423,6 +1424,103 @@
     "    pbp_df.to_parquet(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\play_by_play.parquet')\n",
     "else:\n",
     "    pbp_all.to_parquet(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\play_by_play.parquet')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get NBA Players Info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_players_html(letter: str):\n",
+    "    players = requests.get(f\"https://www.basketball-reference.com/players/{letter}/\")\n",
+    "    soup = BeautifulSoup(players.content, \"html.parser\")\n",
+    "    if soup.find('h1').text == 'Page Not Found (404 error)':\n",
+    "        return False\n",
+    "    else:\n",
+    "        return soup"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_letters = [chr(i) for i in range(ord('a'), ord('z') + 1)]\n",
+    "\n",
+    "\n",
+    "all_letters.index('a')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Scraping NBA Players Info"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_letters = [chr(i) for i in range(ord('a'), ord('z') + 1)]\n",
+    "failed_letters = []\n",
+    "players_df = pd.DataFrame()\n",
+    "total_lag_time = 0\n",
+    "\n",
+    "logging.warning('\\n\\n\\n-------------------------------------Start of Scraping Player Info!-------------------------------------\\n\\n\\n')\n",
+    "\n",
+    "start_time = time.time()\n",
+    "\n",
+    "for i in all_letters:\n",
+    "    logging.info(f'Scraping letter {i}')\n",
+    "\n",
+    "    try:\n",
+    "        loop_players_df = pd.read_html(str(get_players_html(i).find_all('table', id='players')[0]))[0]\n",
+    "        logging.info(f'Scraped letter {i} | {len(players_df)} players')\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        logging.error(f'Failed to scrape letter {i}: {e}\\n')\n",
+    "        failed_letters.append(i)\n",
+    "    \n",
+    "    players_df = pd.concat([players_df, loop_players_df], axis=0)\n",
+    "    logging.info(f'Concatenated letter {i} | {len(players_df)} players')\n",
+    "\n",
+    "    lag = np.random.randint(4,6)\n",
+    "    total_lag_time += lag\n",
+    "\n",
+    "    logging.info(f'Cycle lag time: {lag}')\n",
+    "    logging.info(f'Total lag time after {all_letters.index(i)+1} cycles: {total_lag_time}\\n')\n",
+    "\n",
+    "    time.sleep(lag)\n",
+    "players_df = players_df.set_index('Player').reset_index()\n",
+    "players_df.to_csv(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\players.csv', index=False)\n",
+    "\n",
+    "logging.info(f'Total lag time: {total_lag_time} seconds | {round(total_lag_time / 60, 2)} minutes | {round(total_lag_time / 3600, 2)} hours')\n",
+    "logging.info(f'Failed letters: {len(failed_letters)} out of {len(all_letters)} letters')\n",
+    "logging.info(f'Time elapsed: {time.time() - start_time} seconds | {round((time.time() - start_time) / 60, 2)} minutes | {round((time.time() - start_time) / 3600, 2)} hours')\n",
+    "logging.info(f'Averaged {round((time.time() - start_time) / len(all_letters), 2)} seconds per letter')"
    ]
   }
  ],
