constructued nba ERD

--- a/nba_airflow/core/nba_api.ipynb
+++ b/nba_airflow/core/nba_api.ipynb
@@ -1522,6 +1522,170 @@
     "logging.info(f'Time elapsed: {time.time() - start_time} seconds | {round((time.time() - start_time) / 60, 2)} minutes | {round((time.time() - start_time) / 3600, 2)} hours')\n",
     "logging.info(f'Averaged {round((time.time() - start_time) / len(all_letters), 2)} seconds per letter')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# read play_by_play data\n",
+    "import pandas as pd\n",
+    "df = pd.read_parquet(r'D:\\lianz\\Desktop\\Python\\personal_projects\\nba_airflow\\data\\play_by_play.parquet')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>player_name</th>\n",
+       "      <th>time_left</th>\n",
+       "      <th>team_name</th>\n",
+       "      <th>score_status</th>\n",
+       "      <th>x_shot_pos</th>\n",
+       "      <th>y_shot_pos</th>\n",
+       "      <th>quarter</th>\n",
+       "      <th>shot_status</th>\n",
+       "      <th>full_text</th>\n",
+       "      <th>datetime</th>\n",
+       "      <th>game_id</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>James Harden</td>\n",
+       "      <td>11:38.0</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Philadelphia now leads 2-0</td>\n",
+       "      <td>144</td>\n",
+       "      <td>427</td>\n",
+       "      <td>1st quarter</td>\n",
+       "      <td>make</td>\n",
+       "      <td>1st quarter, 11:38.0 remaining&lt;br&gt;James Harden...</td>\n",
+       "      <td>2023-05-01 19:30:00</td>\n",
+       "      <td>202305011930PHIBOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Tyrese Maxey</td>\n",
+       "      <td>11:06.0</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Philadelphia tied 2-2</td>\n",
+       "      <td>413</td>\n",
+       "      <td>212</td>\n",
+       "      <td>1st quarter</td>\n",
+       "      <td>miss</td>\n",
+       "      <td>1st quarter, 11:06.0 remaining&lt;br&gt;Tyrese Maxey...</td>\n",
+       "      <td>2023-05-01 19:30:00</td>\n",
+       "      <td>202305011930PHIBOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Paul Reed</td>\n",
+       "      <td>10:33.0</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Philadelphia trails 2-4</td>\n",
+       "      <td>282</td>\n",
+       "      <td>412</td>\n",
+       "      <td>1st quarter</td>\n",
+       "      <td>miss</td>\n",
+       "      <td>1st quarter, 10:33.0 remaining&lt;br&gt;Paul Reed mi...</td>\n",
+       "      <td>2023-05-01 19:30:00</td>\n",
+       "      <td>202305011930PHIBOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Tobias Harris</td>\n",
+       "      <td>10:00.0</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Philadelphia now trails 4-6</td>\n",
+       "      <td>265</td>\n",
+       "      <td>300</td>\n",
+       "      <td>1st quarter</td>\n",
+       "      <td>make</td>\n",
+       "      <td>1st quarter, 10:00.0 remaining&lt;br&gt;Tobias Harri...</td>\n",
+       "      <td>2023-05-01 19:30:00</td>\n",
+       "      <td>202305011930PHIBOS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>James Harden</td>\n",
+       "      <td>9:28.0</td>\n",
+       "      <td>Philadelphia</td>\n",
+       "      <td>Philadelphia now tied 6-6</td>\n",
+       "      <td>296</td>\n",
+       "      <td>296</td>\n",
+       "      <td>1st quarter</td>\n",
+       "      <td>make</td>\n",
+       "      <td>1st quarter, 9:28.0 remaining&lt;br&gt;James Harden ...</td>\n",
+       "      <td>2023-05-01 19:30:00</td>\n",
+       "      <td>202305011930PHIBOS</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     player_name time_left      team_name                 score_status  \\\n",
+       "0   James Harden   11:38.0  Philadelphia    Philadelphia now leads 2-0   \n",
+       "1   Tyrese Maxey   11:06.0   Philadelphia        Philadelphia tied 2-2   \n",
+       "2      Paul Reed   10:33.0   Philadelphia      Philadelphia trails 2-4   \n",
+       "3  Tobias Harris   10:00.0  Philadelphia   Philadelphia now trails 4-6   \n",
+       "4   James Harden    9:28.0  Philadelphia     Philadelphia now tied 6-6   \n",
+       "\n",
+       "   x_shot_pos  y_shot_pos      quarter shot_status  \\\n",
+       "0         144         427  1st quarter        make   \n",
+       "1         413         212  1st quarter        miss   \n",
+       "2         282         412  1st quarter        miss   \n",
+       "3         265         300  1st quarter        make   \n",
+       "4         296         296  1st quarter        make   \n",
+       "\n",
+       "                                           full_text            datetime  \\\n",
+       "0  1st quarter, 11:38.0 remaining<br>James Harden... 2023-05-01 19:30:00   \n",
+       "1  1st quarter, 11:06.0 remaining<br>Tyrese Maxey... 2023-05-01 19:30:00   \n",
+       "2  1st quarter, 10:33.0 remaining<br>Paul Reed mi... 2023-05-01 19:30:00   \n",
+       "3  1st quarter, 10:00.0 remaining<br>Tobias Harri... 2023-05-01 19:30:00   \n",
+       "4  1st quarter, 9:28.0 remaining<br>James Harden ... 2023-05-01 19:30:00   \n",
+       "\n",
+       "              game_id  \n",
+       "0  202305011930PHIBOS  \n",
+       "1  202305011930PHIBOS  \n",
+       "2  202305011930PHIBOS  \n",
+       "3  202305011930PHIBOS  \n",
+       "4  202305011930PHIBOS  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
